# pptx2txt

./: .editorconfig  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile_dev  LICENSE  Makefile  README.md  create_sendto_shortcut.py  pptx2txt  pptx2txt.py  pptx2txt_dev  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.bat  setup.sh
.github/workflows/: check_for_updates.yaml  check_for_updates.yml  ci.yml  docker.yml
hooks/: pre-commit
test/: clean.bat  clean.sh  invalid.pptx  run.bat  run.sh  sample1.pptx  sample2.pptx  sample3.pptx  test_basic.bat  test_basic.sh  test_error_scenarios.sh
test/expected/: sample1.txt  sample2.txt  sample3.txt
tools/: build.sh  check_for_action_updates.sh  check_for_file_updates.sh  check_for_image_updates.sh  check_for_new_release.sh  colored_echo.sh  container_engine.sh  flake8.sh  hadolint.sh  markdownlint-cli2.sh  markdownlint.sh  mypy.sh  pip-compile.sh  ruff.sh  shellcheck.sh  shfmt.sh  uv.sh
