[project]
name = "pptx2txt"
version = "0.0.0"  # Formal value only; actual version managed in pptx2txt.py
dependencies = [
    "python-pptx",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ptpython",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import order)
    "N",      # pep8-naming
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "S",      # flake8-bandit
    "UP",     # pyupgrade (includes f-string)
    "W",      # pycodestyle warnings
]
